feat: add problems list

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
 JUDGE_SERVER_URL=your_judge_server_url
 JUDGE_SERVER_TOKEN=your_judge_server_token
+JWT_SECRET=your_jwt_secret
+DATABASE_URL=your_database_url
+DATABASE_USERNAME=your_database_username
+DATABASE_PASSWORD=your_database_password
+JWT_ACCESS_TOKEN_EXPIRATION=your_jwt_access_token_expiration
+JWT_REFRESH_TOKEN_EXPIRATION=your_jwt_refresh_token_expiration
