add google login

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,9 @@ DATABASE_USERNAME=your_database_username
 DATABASE_PASSWORD=your_database_password
 JWT_ACCESS_TOKEN_EXPIRATION=your_jwt_access_token_expiration
 JWT_REFRESH_TOKEN_EXPIRATION=your_jwt_refresh_token_expiration
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+GOOGLE_REDIRECT_URI=your_google_redirect_uri
+GOOGLE_AUTH_URI=https://accounts.google.com/o/oauth2/auth
+GOOGLE_TOKEN_URI=https://oauth2.googleapis.com/token
+GOOGLE_USER_INFO_URI=https://www.googleapis.com/oauth2/v3/userinfo
