--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,25 @@
 services:
-  postgres:
-    image: postgres
-    container_name: postgres
-    restart: unless-stopped
+  app:
+    build: .
+    container_name: judge-api
+    ports:
+      - "8000:8000"
+    depends_on:
+      - db
+    env_file:
+      - .env
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: 123456
-      PGDATA: /data/postgres
+      - DATABASE_URL=jdbc:postgresql://db:5432/my_oj
+
+  db:
+    image: postgres:16
+    container_name: my-oj-postgres
+    restart: always
+    environment:
+      POSTGRES_USER: ${DATABASE_USERNAME}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+      POSTGRES_DB: my_oj
+    ports:
+      - "5433:5432"
     volumes:
-      - postgres:/data/postgres
       - ./initdb.sql:/docker-entrypoint-initdb.d/init.sql
-    ports:
-      - '5432:5432'
-    networks:
-      - default
-
-  backend-service:
-    container_name: backend-service
-    build:
-      context: ./
-      dockerfile: Dockerfile
-    ports:
-      - "8080:8080"
-    networks:
-      - default
-
-networks:
-  default:
-    name: backend-service
-
-volumes:
-  mysql_data:
